try to deploy gh-pages

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "bugs": {
     "url": "https://github.com/fieldceleste/movie-api-teamweek/issues"
   },
-  "homepage": "https://github.com/fieldceleste/movie-api-teamweek#readme"
+  "homepage":  "https://fieldceleste.github.io/movie-api-teamweek/"
 }
