--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "npm run build & webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
     "test": "jest",
-    "debug": "node --inspect node_modules/.bin/jest --runInBand"
+    "debug": "node --inspect node_modules/.bin/jest --runInBand",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "Celeste Field, Chisato Murakami, Joesph Pearce, Nitun Datta",
@@ -21,6 +23,7 @@
     "eslint": "^6.3.0",
     "eslint-loader": "^3.0.0",
     "file-loader": "^1.1.6",
+    "gh-pages": "^2.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
@@ -43,5 +46,5 @@
   "bugs": {
     "url": "https://github.com/fieldceleste/movie-api-teamweek/issues"
   },
-  "homepage":  "https://fieldceleste.github.io/movie-api-teamweek/"
+  "homepage": "https://fieldceleste.github.io/movie-api-teamweek/"
 }
