--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
   "bugs": {
     "url": "https://github.com/fieldceleste/movie-api-teamweek/issues"
   },
-  "homepage": "https://fieldceleste.github.io/movie-api-teamweek/"
+  "homepage": "https://fieldceleste.github.io/movie-api-teamweek/index.html"
 }
